fix for background on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,7 @@
 }
 body {
     background-image: var(--bg-img);
+    background-size: cover;
 }
 
 p {
